# energy-transformers-tcrp

./: .gitignore  README.md  dvc.yaml  params.yaml  pyproject.toml  wandb_config.yaml  wandb_config_no_model_params.yaml
data/processed/: .gitignore
data/raw/: .gitignore  test-00000-of-00001.parquet  test-00000-of-00001.parquet.dvc  train-00000-of-00001.parquet  train-00000-of-00001.parquet.dvc  validation-00000-of-00001.parquet  validation-00000-of-00001.parquet.dvc
notebooks/: 1.0-legb-listops-etl.ipynb  2.0-legb-model-tests.ipynb  3.0-legb-model_combinations_cloud.ipynb  3.1-legb-model_combinations_2xGPU.ipynb  4.0-legb-listops_energy.ipynb
sandbox/: training.py
src/: listops_model_combinations.py  listops_parallel_model_comb.py  listops_tokenize_data.py  listops_train_model.py  listops_train_wandb.py
src/data_handling/: listops32.py
src/energy_transformers/: baseline_transformer.py  energy_transformer.py  model_config.py
src/evaluation/: evaluate.py
src/training/: training.py  training_config.py  training_optuna.py  training_wandb.py
src/utils/: model_loader.py
