[tool.poetry]
name = "energy-transformers"
version = "0.1.0"
description = ""
authors = ["luisemilio14 <luisemilio21@ufmg.br>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12, <3.13"
numpy = "^2.4.6"
pandas = "^3.0.3"
torch = "^2.12.0"
dvc = "^3.67.1"
ipykernel = "^7.2.0"
fastparquet = "^2026.5.0"
google-api-python-client = "^2.197.0"
google-auth-httplib2 = "^0.4.0"
google-auth-oauthlib = "^1.4.0"
optuna = "^4.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
